fixed overflow

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -30,6 +30,7 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
+  overflow: hidden;
 }
 
 .card__button-like {
